Sun Apr  4 10:35:13 2004  Joern Thyssen  <jth@gnubg.org>

	Respect $BROWSER
	(http://www.catb.org/~esr/BROWSER/index.html)

	* openurl.c: use env. variable BROWSER. Also, call "system"
	instead of g_command_line_sync which doesn't seem to work with lynx.
	

	* gnubg.c: new commands "show manual [web|gui]".
	* gtkgame.c: use "show manual [web|gui]".
	* show.c: new functions "show manual [web|gui]".

Sun Apr  4 09:43:17 2004  Joern Thyssen  <jth@gnubg.org>

	* sound.c: include <libaudiofile.h>

Thu Apr 1 11:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkchequer.c: Reset interupt flag on analysis start
	* sound.c: Add some error handiling to windows sound

Wed Mar 31 20:58:49 2004  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am: add BR1_SOURCES to makebearoff and makehyper.
	* configure.in: whoops, remove "dynamic"..
	* sound.c: include <stropts.h> [SIGIO]

Wed Mar 31 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c and other files: Moved preview in preferences

Mon Mar 29 17:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Fixed small bug to allow both names to be swapped

Mon Mar 29 09:40:02 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am: target for br1.c not kept up to date with
	changes in makebearoff	
	* Makefile.am: FLEX->LEX, BISON->YACC
	* bearoff.h: declare BearoffAlloc extern
	* configure.in: add "dynamic" as parameter to --enable-bearoff
	* makebearoff1.c: update code to match latest version of bearoff.h
	* play.c (DumpGameList): fix typo, add linebreak
	(reported by Mike Whitton)

	* gtkgame.c: use correct release_id when reporting bugs.

Sun Mar 28 09:07:48 2004  Joern Thyssen  <jth@gnubg.org>

	* matchequity.c (initMETZadeh): use G1 for calculation
	of 1-away pre-Crawford values.

Sat Mar 27 10:45:08 CET 2004  Joern Thyssen  <jth@gnubg.org>

	Prerelease 0.14.2

Thu Mar 25 22:22:57 CET 2004  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am, */Makefile.am: add a few missing files